--- a/Songs/callmemaybe.html
+++ b/Songs/callmemaybe.html
@@ -84,7 +84,7 @@ a:visited {
 <br><br>
 <p1><span style="color: 96558a"> public class </span> CallMeMaybe</p>
 <p1>{</p>
-	<p class ="midd"><span style="color: 96558a">public static </span> String <span style="color: 1531be; font-style: italic">myNumber</span> = <span style="color: 361dfa">"(650) 515-3355"</span>;</p>
+	<p class ="midd"><span style="color: 96558a">public static </span> String <span style="color: 1531be; font-style: italic">myNumber</span> = <span style="color: 361dfa">"(650) xxx-xxxx"</span>;</p>
 	<p class ="midd"><span style="color: 96558a">public static </span> String <span style="color: 1531be;  font-style: italic">maybe</span> = <span style="color: 361dfa">"So call me maybe!"</span>; </p>
 	<p class ="midd"><span style="color: 96558a">public static </span> String <span style="color: 1531be;  font-style: italic">maybeNot</span> = <span style="color: 361dfa">"Before you came into my life, I missed you so bad. And you should know that"</span>; </p>
 	<br>
